beta 002 index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            position: relative;
         }
         h2 {
             color: #800000;
@@ -178,18 +179,22 @@
             justify-content: space-around;
             width: 30px;
             height: 30px;
-            background: transparent;
-            border: none;
+            background: #fff;
+            border: 1px solid #800000;
+            border-radius: 5px;
             cursor: pointer;
             padding: 0;
             z-index: 10;
+            position: absolute;
+            top: 20px;
+            left: 20px;
         }
         .menu-toggle:focus {
             outline: none;
         }
         .menu-toggle div {
-            width: 30px;
-            height: 3px;
+            width: 20px;
+            height: 2px;
             background: #800000;
             border-radius: 10px;
             transition: all 0.3s linear;
@@ -298,160 +303,6 @@
         </div>
     </div>
 
-    <script>
-        let isAdmin = false;
-        let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
-
-        function showPasswordInput() {
-            document.getElementById("password-section").classList.remove("hidden");
-        }
-
-        function verifyAdmin() {
-            let password = document.getElementById("adminPassword").value;
-            if (password === "sodium_chloride") {
-                isAdmin = true;
-                document.getElementById("login").classList.add("hidden");
-                document.getElementById("main-content").classList.remove("hidden");
-                document.getElementById("adminActions").classList.remove("hidden");
-                document.getElementById("clearBtn").classList.remove("hidden");
-                document.getElementById("adminMenu").classList.remove("hidden");
-                loadBookings();
-            } else {
-                document.getElementById("error-message").classList.remove("hidden");
-            }
-        }
-
-        function setMode(mode) {
-            document.getElementById("login").classList.add("hidden");
-            document.getElementById("main-content").classList.remove("hidden");
-            loadBookings();
-        }
-
-        function loadBookings() {
-            let bookingList = document.getElementById("bookingList");
-            bookingList.innerHTML = "";
-
-            bookings.forEach((booking, index) => {
-                let row = document.createElement("tr");
-                row.innerHTML = `<td>${booking.name}</td>
-                                 <td>${booking.contact}</td>
-                                 <td>${booking.grade}</td>
-                                 <td>${booking.design ? 'Design ' + booking.design : 'Custom'}</td>
-                                 <td>${booking.customDesign ? `<img src="${booking.customDesign}" width="50" height="50" onclick="openImage('${booking.customDesign}')">` : 'None'}</td>
-                                 <td>${booking.date}</td>
-                                 <td>${booking.time}</td>
-                                 <td>${booking.status}</td>
-                                 ${isAdmin ? `<td>
-                                     <select onchange="updateStatus(${index}, this.value)">
-                                         <option value="Being Made" ${booking.status === "Being Made" ? "selected" : ""}>Being Made</option>
-                                         <option value="Preparing" ${booking.status === "Preparing" ? "selected" : ""}>Preparing</option>
-                                         <option value="Delivering" ${booking.status === "Delivering" ? "selected" : ""}>Delivering</option>
-                                         <option value="Delivered" ${booking.status === "Delivered" ? "selected" : ""}>Delivered</option>
-                                     </select>
-                                     <button onclick="deleteBooking(${index})">🗑 Delete</button>
-                                 </td>` : ''}`;
-                bookingList.appendChild(row);
-            });
-        }
-
-        function updateStatus(index, status) {
-            bookings[index].status = status;
-            localStorage.setItem("bookings", JSON.stringify(bookings));
-            loadBookings();
-        }
-
-        function deleteBooking(index) {
-            bookings.splice(index, 1);
-            localStorage.setItem("bookings", JSON.stringify(bookings));
-            loadBookings();
-        }
-
-        function clearBookings() {
-            bookings = [];
-            localStorage.setItem("bookings", JSON.stringify(bookings));
-            loadBookings();
-        }
-
-        // Back button functionality
-        function goBack() {
-            isAdmin = false;
-            document.getElementById("adminPassword").value = "";
-            document.getElementById("error-message").classList.add("hidden");
-            document.getElementById("main-content").classList.add("hidden");
-            document.getElementById("login").classList.remove("hidden");
-            document.getElementById("adminMenu").classList.add("hidden");
-        }
-
-        function toggleMenu() {
-            document.querySelector('.menu-toggle').classList.toggle('open');
-            // Toggle admin menu visibility
-            if (isAdmin) {
-                document.getElementById("adminMenu").classList.toggle("hidden");
-            }
-        }
-
-        function trackIP() {
-            // Implement IP tracking logic here
-            alert("IP tracking feature is under construction.");
-        }
-
-        function archiveBookings() {
-            // Implement booking list archiving logic here
-            alert("Booking list archive feature is under construction.");
-        }
-
-        // Modal functionality
-        document.getElementById("bookingForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-
-            let formData = {
-                name: document.getElementById("name").value.trim(),
-                contact: document.getElementById("contact").value.trim(),
-                grade: document.getElementById("grade").value.trim(),
-                design: document.getElementById("design").value,
-                date: document.getElementById("date").value,
-                time: document.getElementById("time").value,
-                customDesign: document.getElementById("customDesign").files[0] ? URL.createObjectURL(document.getElementById("customDesign").files[0]) : null
-            };
-
-            if (!formData.name || !formData.contact || !formData.grade || !formData.date || !formData.time) {
-                alert("Please fill in all required fields.");
-                return;
-            }
-
-            if (!formData.design && !formData.customDesign) {
-                alert("Please select a design or upload a custom design.");
-                return;
-            }
-
-            // Delete duplicate if exists
-            bookings = bookings.filter(booking => 
-                !(booking.name === formData.name &&
-                  booking.contact === formData.contact &&
-                  booking.grade === formData.grade &&
-                  booking.date === formData.date &&
-                  booking.time === formData.time)
-            );
-
-            bookings.push(formData);
-            localStorage.setItem("bookings", JSON.stringify(bookings));
-
-            // Show the modal
-            let modal = document.getElementById("thankYouModal");
-            modal.style.display = "block";
-
-            // Close the modal when the user clicks on <span> (x)
-            document.querySelector(".close").onclick = function() {
-                modal.style.display = "none";
-            };
-
-            // Close the modal when the user clicks anywhere outside of the modal
-            window.onclick = function(event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            };
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
